--- a/.github/reuseing.yml
+++ b/.github/reuseing.yml
@@ -4,13 +4,13 @@ name: reuseing
 on:
   workflow_call:
     # Map the workflow outputs to job outputs
-#     outputs:
-#       firstword:
-#         description: "The first output string"
-#         value: "env1"
-#       secondword:
-#         description: "The second output string"
-#         value: "env2"
+    outputs:
+      firstword:
+        description: "The first output string"
+        value: "env1"
+      secondword:
+        description: "The second output string"
+        value: "env2"
 
 jobs:
   example_job:
