--- a/.github/useing1.yml
+++ b/.github/useing1.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   job1:
-    uses: ./.github/workflows/reuseing.yml@main
+    uses: ./.github/workflows/reuseing.yml
   job2:
     runs-on: ubuntu-latest
     needs: job1
