--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -20,3 +20,4 @@ jobs:
       - id: step1
         run: |
           echo "This is reuseing."
+          echo "::error file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
