--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -24,3 +24,5 @@ jobs:
           stopMarker=$(uuidgen)
           echo "::stop-commands::$stopMarker"
           echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
+          echo "::$stopMarker::"
+          echo '::warning:: This is a warning again, because stop-commands has been turned off.'
