--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -22,7 +22,7 @@ jobs:
           echo "This is reuseing."
           echo '::warning:: This is a warning message, to demonstrate that commands are being processed.'
           stopMarker=$(uuidgen)
-          echo "::stop-commands::$stopMarker"
+          echo ::stop-commands::$stopMarker
           echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
           echo "::$stopMarker::"
           echo '::warning:: This is a warning again, because stop-commands has been turned off.'
