--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -26,3 +26,8 @@ jobs:
           echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
           echo "::$stopMarker::"
           echo '::warning:: This is a warning again, because stop-commands has been turned off.'
+          echo '::set-output name=action_echo::disabled'
+          echo '::echo::on'
+          echo '::set-output name=action_echo::enabled'
+          echo '::echo::off'
+          echo '::set-output name=action_echo::disabled'
