--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -25,7 +25,7 @@ jobs:
           echo ::stop-commands::$stopMarker
           echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
           echo "::$stopMarker::"
-          echo '::warning:: This is a warning again, because stop-commands has been turned off.'
+          echo '::error:: This is a warning again, because stop-commands has been turned off.'
           echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
           echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
