--- a/.github/workflows/reuseing.yml
+++ b/.github/workflows/reuseing.yml
@@ -31,3 +31,4 @@ jobs:
           echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
           echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
           echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
+          exit
